# GameGenie

./: .gitignore  CHANGELOG.md  LICENSE  README.md  package.json  pyproject.toml
Editor/: CodeExecutor.cs  CodeParser.cs  GameGenie.Editor.asmdef  GameGenieWindow.cs  SceneContextExtractor.cs  UnityMCPClient.cs  WebsocketEditorWindow.cs
Editor/GameGenie/: ClaudeApiClient.cs  CodeExecutor.cs  CodeParser.cs  GameGenieWindow.cs  SceneContextExtractor.cs
Runtime/: CodeExecutionService.cs  GameGenie.Runtime.asmdef  HelperService.cs  Logger.cs  MCPTOOLS.cs  SceneContextService.cs  UnityClient.cs
game_genie_mcp/: api_test.py  pyproject.toml
game_genie_mcp/src/: server.py
mcp_server/: game_genie_mcp.py  pyproject.toml
